Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: http://www.microsoft.com/msj/archive/s2ce.aspx

6.06 Mon Aug  8 23:59:48 CEST 2011
	- cygwin unfortunately patches the stack at runtime, so we use the pthreads
          backend, which is an order of magnitutde slower. unfortunately, cygwins
          pthread implementation isn't very complete either, so allocate the stack
          twice just to be sure.
          (note: cygwin also enables mymalloc, which is NOT THREADSAFE ON WINDOWS,
          in its ithreaded perl - best recompile cygwin and use the 'w'indows
          backend for much better performance. also disable ithreads for
          even better performance...).

6.05 Thu Aug  4 21:36:36 CEST 2011
	- blush, condvar values would not be propagated from send to recv anymore
          (reported by Chip Salzenberg).
	- use exponential increase for the readline buffer length in
          Coro::Handle. also reduce initial allocation to 1020 from 4096 bytes.

6.04  Wed Aug  3 17:15:45 CEST 2011
	- use even more efficient and more compatible condvars for
          compatibility to AnyEvent 6.x :)
        - more inconsequential ecb.h updates.

6.03  Wed Aug  3 11:41:30 CEST 2011
	- change how Coro patches AnyEvent condvars for compatibility to
          AnyEvent 6.x.
	- update ecb.h, to no longer include <pthread.h> in case WinNT.h
          hasn't been included.

6.02  Wed Jul 13 04:35:19 CEST 2011
	- "improve portability to Gentoo" - gentoo manages to put perl variables
          in memory areas that are farther than 2gb apart, which the jit couldn't
          handle and barfed. now it's just a bit slower on gentoo and similar
          systems.

6.01  Sun Jul  3 12:31:14 CEST 2011
	- workarounds are good, but the test for whether pthreads are used
          was not good. thisone should be better.
        - check differently whether gcc generates cfi instructions itself.
